[gd_scene load_steps=2 format=3 uid="uid://bypya4yktiad5"]

[ext_resource type="Script" uid="uid://ciqwtr3ohurkl" path="res://scripts/MainMenu.gd" id="1_qkhwq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qkhwq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 363.0
offset_right = 822.0
offset_bottom = 647.0
alignment = 1

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
modulate = Color(1, 0.227451, 0.0901961, 1)
layout_mode = 2

[node name="NickLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Podaj nick:"

[node name="NickInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "nick"

[node name="IPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Podaj IP:"

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "ip"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Zatwierdz"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ControlsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Controls
"

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ConnectingPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConnectingLabel" type="Label" parent="ConnectingPanel"]
layout_mode = 0
offset_left = 453.0
offset_top = 206.0
offset_right = 761.0
offset_bottom = 355.0
